--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.61.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.3.0",
+    "react-native-scrollable-tab-view": "^0.10.0",
+    "react-native-view-shot": "^3.0.2",
     "react-navigation": "^3.13.0",
     "save": "^2.4.0"
   },
