--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-view-shot": "^3.0.2",
