--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-view-shot": "^3.0.2",
     "react-navigation": "^3.13.0",
-    "save": "^2.4.0"
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.1",
+    "reduxsauce": "^1.1.0",
+    "save": "^2.4.0",
+    "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
