--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-view-shot": "^3.0.2",
     "react-navigation": "^3.13.0",
+    "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.1",
